Update Evaluation of Constrained Optimization Methods.ipynb

--- a/Constrained Optimization Methods/Evaluation of Constrained Optimization Methods.ipynb
+++ b/Constrained Optimization Methods/Evaluation of Constrained Optimization Methods.ipynb
@@ -13,7 +13,7 @@
    "id": "3f6e9402",
    "metadata": {},
    "source": [
-    "Thsi Notebook constains the code utilized to optimize the area of the elements of a Truss under a mmaximum allowed matreial volume. "
+    "Thsi Notebook constains the code utilized to optimize the area of the elements of a Truss under a maximum allowed matreial volume. "
    ]
   },
   {
